# Snake

./: .gitignore  CMakeLists.txt
src/: Makefile  readme.tex  snake_cli  snake_desk  tetris_cli  tetris_desk
src/brick_game/: api.h  defines.h
src/brick_game/snake/: Apple.cpp  Apple.h  Game.cpp  Game.h  Snake.cpp  Snake.h  snake.cpp  snake.h
src/brick_game/tetris/: tetris.c  tetris.h
src/gui/cli/: view.c  view.h
src/gui/desktop/: desktop.pro  main.cpp  widget.cpp  widget.h
src/report/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
src/report/snake/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  snake.cpp.func-c.html  snake.cpp.func.html  snake.cpp.gcov.html
src/tests/: test_main.cpp  test_main.h  test_snake.cpp
